package JuegoVampiro2.ui;

public class CredencialesUsuario {
    
}
